<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Tourism</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- Navigation Drawer -->
    <string name="drawer_item_quizzes">All quizzes</string>
    <string name="drawer_item_answered_quizzes">Quizzes results</string>

    <string name="drawer_sub_item_about">About</string>
    <string name="drawer_sub_item_options">Settings</string>

    <!-- Tourist Reference -->
    <string name="reference_description">Your reference</string>

    <!-- Tutorial -->
    <string name="tutorial_age_title">What is your birth date?</string>
    <string name="tutorial_age_hint">YYYY-mm-dd</string>
    <string name="tutorial_age_text">Only used to offer you the most suitable activities</string>
    <string name="tutorial_age_error">Please, give us your birth date</string>
    <string name="tutorial_age_date_error">Birth date date format incorrect</string>

    <string name="tutorial_gender_error">Are you a men or women</string>

    <!-- Activities title -->
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_result">Results</string>

    <!-- Result Activity -->
    <string name="tab_result_name">Quiz results</string>
    <string name="tab_recommendation_name">Recommendations</string>
    <string name="radar_data_set_name">Quiz results</string>

    <!-- Answered quizzes -->
    <string name="answered_quizzes_date_format">MMMM dd, yyyy, hh:mm</string>
    <string name="answered_quizzes_snackbar_text">Thank you for your answers</string>
    <string name="answered_quizzes_snackbar_action">See results</string>

    <!-- No data -->
    <string name="no_data_available">No data available</string>

</resources>
