<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nkdroid.tutorial.navigationview.MainActivity"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    >
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/navigation_item_quizzes"
            android:icon="@drawable/ic_routes_grey600_24dp"
            android:title="@string/drawer_item_quizzes"/>
        <item
            android:id="@+id/navigation_item_answered_quizzes"
            android:icon="@drawable/ic_check_all_grey600_24dp"
            android:title="@string/drawer_item_answered_quizzes"/>
        <!--
        <item
            android:id="@+id/navigation_subheader"
            android:title="Subtitle">
            <item
                android:id="@+id/navigation_sub_item_about"
                android:title="@string/drawer_sub_item_about"/>
            <item
                android:id="@+id/navigation_sub_item_options"
                android:title="@string/drawer_sub_item_options"/>
        </item>
        -->
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/sub_items">
        <item
            android:id="@+id/navigation_sub_item_about"
            android:title="@string/drawer_sub_item_about"
            android:checkable="false"/>
        <item
            android:id="@+id/navigation_sub_item_options"
            android:title="@string/drawer_sub_item_options"
            android:checkable="false"/>
    </group>
</menu>