<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/background"
    android:background="@color/tutorial_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout android:orientation="vertical"
        android:id="@+id/swipe_tut3"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/slider_control"
            android:paddingTop="32.0dip"
            android:layout_width="fill_parent"
            android:layout_height="200.0dip"
            android:layout_alignParentBottom="true">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="22.0sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_marginStart="32.0dip"
                android:text="@string/tutorial_age_title" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                app:errorEnabled="false"
                android:orientation="vertical"
                android:textColor="@color/text_white"
                android:textColorHint="@color/text_white"
                android:textColorHighlight="@color/text_white"
                >
                <EditText
                    android:id="@+id/edit_text_tutorial_age"
                    android:theme="@style/EditTextWhite"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:inputType="date"
                    android:hint="@string/tutorial_age_hint"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/text_white"
                    android:textColorHighlight="@color/text_white"
                    />
            </android.support.design.widget.TextInputLayout>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/abc_secondary_text_material_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_marginStart="32.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginRight="72.0dip"
                android:layout_marginEnd="72.0dip"
                android:text="@string/tutorial_age_text"
                android:alpha="0.8" />
        </LinearLayout>
        <ImageView
            android:layout_width="240.0dip"
            android:layout_height="270.0dip"
            android:src="@drawable/tutoriel_birthday"
            android:layout_above="@id/slider_control"
            android:layout_centerHorizontal="true"
            android:id="@+id/man" />
        <View
            android:background="@drawable/shadow_horizontal_inverted"
            android:layout_width="fill_parent"
            android:layout_height="5.0dip"
            android:layout_above="@id/slider_control" />
    </RelativeLayout>
</FrameLayout>